[x/go.dev] fix overlapping learn card images

X-GoDev-Commit: ee33a34074bba23456e6505ce9c92434dffe4db3

--- a/go.dev/assets/css/styles.css
+++ b/go.dev/assets/css/styles.css
@@ -2163,7 +2163,7 @@ a.WhoUsesCaseStudy-librariesViewMoreLink {
     max-width: 46.825rem;
   }
   .Learn-eventThumbnail {
-    height: 10.875rem;
+    height: 17rem;
     min-width: 18.375rem;
     margin-right: 1rem;
     margin-bottom: 0;
